<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">V Code</string>
    <string name="version">1.0</string>
    <string name="version_name">Version - 1.0</string>
    <string name="app_logo">App Logo</string>
    <string name="fileReadingFailed">File reading failed !</string>
    <string name="saved">"Saved "</string>
    <string name="unableToSave">Save failed</string>
    <string name="copySuccess">Copied</string>
    <string name="copyFalied">Copy failed</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="privacyPolicyMessage">Accept the privacy policy ?</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="view">View Policy</string>
    <string name="pick_File_Text">Open a file !</string>
    <string name="addFile_TextMenu"><![CDATA[Open & Add File]]></string>
    <string name="setting">Settings</string>
    <string name="coloring">Coloring…</string>
    <string name="pleaseWait">Please wait</string>
    <string name="fileAlreadyPicked">You have already opened this file.</string>
    <string name="openBottomSheet">Open info panel.</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="fullScreen">Full screen</string>
    <string name="compile">Compile</string>
    <string name="splitScreen">Split screen</string>
    <string name="deleteFile">Delete file</string>
    <string name="addFile">Add file</string>
    <string name="closeBtmSht">Close info panel</string>
    <string name="cancel">Cancel</string>
    <string name="find">Find</string>
    <string name="regex">Regex</string>
    <string name="exactMatch">Case sensitive</string>
    <string name="closeSearch">Close search results</string>
    <string name="search_findPrev">Highlight previous find</string>
    <string name="search_findNext">Highlight next find</string>
    <string name="invalidPattern">Invalid RegEx pattern</string>
    <string name="noMatchFound">No match found</string>
    <string name="noResultFound">No search result found</string>
    <string name="suggestion">Suggestion</string>
    <string name="changeToLandscape">Please change your device to landscape orientation to get a better experience</string>
    <string name="change">"Change "</string>
    <string name="ok">Okay</string>
    <string name="selectFile">Select a file</string>
    <string name="split">Split</string>
    <string name="selectActiveFile">Select active file</string>
    <string name="codeView">Code View</string>
    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="cantDelOnlyFile">Can\'t delete the only file</string>
    <string name="fileAreadyDisplayed">File is already being displayed.</string>
    <string name="editor">Editor</string>
    <string name="codeType">Code Type</string>
    <string name="readOnly">Read only</string>
    <string name="saveFile_TextMenu">Save</string>
    <string name="curlyBracket">{ }</string>
    <string name="boxBracket">[ ]</string>
    <string name="curvedBracket">( )</string>
    <string name="equalTo">=</string>
    <string name="exclamation">!</string>
    <string name="semicolon">;</string>
    <string name="colon">:</string>
    <string name="quote">\" \"</string>
    <string name="singleQuote">\' \'</string>
    <string name="and"><![CDATA[&]]></string>
    <string name="similar">~</string>
    <string name="createFile">Create a file</string>
    <string name="openFile">Open file(s)</string>
    <string name="loadFromUrl">Load file from URL</string>
    <string name="enterURL">Web URL</string>
    <string name="continueStr">Continue</string>
    <string name="malformedURL">Malformed URL</string>
    <string name="fileName_demo">file_name.language_extension</string>
    <string name="convertToPDF">Convert to PDF</string>
    <string name="number_2">2</string>
    <string name="layout_2">2 Screen layout</string>
    <string name="layout_3A">3 Screen layout - A</string>
    <string name="selectLayout">Select Layout Style and Files</string>
    <string name="layout_3B">3 Screens layout - B</string>
    <string name="layout_4">4 Screens layout</string>
    <string name="layout">Layouts</string>
    <string name="files">Files</string>
    <string name="file">File</string>
    <string name="file1">File 1</string>
    <string name="file2">File 2</string>
    <string name="file3">File 3</string>
    <string name="file4">File 4</string>
    <string name="findAndReplace">Find and replace</string>
    <string name="emptyField">Empty field</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="fastLoad">Fast load</string>
    <string name="fastLoad_summaryON">All the content of your opened files will be put up into RAM hence improving the performance at the cost of high usage of RAM. *</string>
    <string name="fastLoad_summaryOFF">All the content of opened files will be added to RAM to improve performance but this requires a device with more RAM. *</string>
    <string name="theme">Theme</string>
    <string name="wrapLines">Wrap lines</string>
    <string name="showLineNumber">Show line number</string>
    <string name="highlight_OFF">App will wait un-till the file is fully highlighted. This depends on the file size, higher file size higher time to highlight.</string>
    <string name="highlight_ON">App will not wait for the file to get fully highlighted and can be viewed before highlighted.</string>
    <string name="dis_hl_largerFiles">Disable highlight dialog for larger files</string>
    <string name="lineLimit_disableHighlight">Maximum line limit</string>
    <string name="lineLimit_summary">If the total lines in a file is greater than this limit then highlight will be disabled.</string>
    <string name="commonTheme">Common Theme</string>
    <string name="commonTheme_codeViewOFF">Same theme will be used for all the split screen view as chosen above.</string>
    <string name="commonTheme_codeViewON">Individual Theme will be set for each view.</string>
    <string name="theme1">Theme 1</string>
    <string name="theme2">Theme 2</string>
    <string name="theme3">Theme 3</string>
    <string name="theme4">Theme 4</string>
    <string name="individualTheme">Individual Themes</string>
    <string name="pinchZoom">Pinch Zoom</string>
    <string name="textSize">Font size</string>
    <string name="inputOnlyNumbers">Please type in only numbers.</string>
    <string name="common">Common</string>
    <string name="organizeFileInfo">Organize file info</string>
    <string name="organizeFileInfo_summary">All methods dropdown will be well organized.</string>
    <string name="fileInfo">File Info:</string>
    <string name="totalMethods">Methods :</string>
    <string name="miniErrorDisplay">This displays any error in displaying file.</string>
    <string name="errors">Errors</string>
    <string name="warnings">Warnings</string>
    <string name="cloud_upload">Cloud Upload</string>
    <string name="signin_successful">Sign In Successful</string>
    <string name="cloud_browser">Cloud File Browser</string>
    <string name="uploaded_files">Uploaded files</string>
    <string name="account">Account</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="username">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_id">Mail ID</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_out_success">"Sign out Success "</string>
    <string name="language_display_image">Language Display ImageView</string>
    <string name="deleteFile_browser">Delete cloud file</string>
    <string name="editFile_browser">Edit cloud file</string>
    <string name="openFile_browser">Open cloud file</string>
    <string name="file_information">File information</string>
    <string name="file_details">File details</string>
    <string name="name">File name:</string>
    <string name="size">Size:</string>
    <string name="created_time">File created at:</string>
    <string name="lastUpdated_time">Last updated:</string>
    <string name="uploaded_from">Uploaded from:</string>
    <string name="download_compilers">Download compilers</string>
    <string name="title_activity_all_compile_sdk">AllCompileSDK</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="copyAll_message">This will copy code from all the split screened files. Is it okay ?</string>

</resources>
