<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/codeView">

        <ListPreference
            app:defaultValue="monokai-sublime"
            app:entries="@array/codeView_Theme"
            app:entryValues="@array/codeView_Theme_values"
            app:icon="@drawable/ic_theme"
            app:key="pref_codeviewThemes"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_wrap_lines"
            app:key="pref_wrapLines_codeView"
            app:title="@string/wrapLines" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_line_number"
            app:key="pref_lineNumber_codeView"
            app:title="@string/showLineNumber" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="pref_pinchZoom"
            app:title="@string/pinchZoom" />

        <EditTextPreference
            app:defaultValue="15"
            app:dialogMessage="@string/inputOnlyNumbers"
            app:key="pref_textSize_codeView"
            app:title="@string/textSize" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="pref_fastLoad"
            app:summaryOff="@string/fastLoad_summaryOFF"
            app:summaryOn="@string/fastLoad_summaryON"
            app:title="@string/fastLoad" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="pref_disableHighlightLargerFile"
            app:singleLineTitle="false"
            app:summaryOff="@string/highlight_OFF"
            app:summaryOn="@string/highlight_ON"
            app:title="@string/dis_hl_largerFiles" />

        <EditTextPreference
            app:defaultValue="1000"
            app:dependency="pref_disableHighlightLargerFile"
            app:dialogMessage="@string/inputOnlyNumbers"
            app:key="maxLineLimit"
            app:summary="@string/lineLimit_summary"
            app:title="@string/lineLimit_disableHighlight" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/splitScreen">

        <CheckBoxPreference
            app:defaultValue="false"
            app:key="individualTheme_codeView"
            app:summaryOff="@string/commonTheme_codeViewOFF"
            app:summaryOn="@string/commonTheme_codeViewON"
            app:title="@string/individualTheme" />

        <ListPreference
            app:defaultValue="monokai-sublime"
            app:dependency="individualTheme_codeView"
            app:entries="@array/codeView_Theme"
            app:entryValues="@array/codeView_Theme_values"
            app:icon="@drawable/ic_theme"
            app:key="pref_codeviewThemes1"
            app:title="@string/theme1"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="monokai-sublime"
            app:dependency="individualTheme_codeView"
            app:entries="@array/codeView_Theme"
            app:entryValues="@array/codeView_Theme_values"
            app:icon="@drawable/ic_theme"
            app:key="pref_codeviewThemes2"
            app:title="@string/theme2"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="monokai-sublime"
            app:dependency="individualTheme_codeView"
            app:entries="@array/codeView_Theme"
            app:entryValues="@array/codeView_Theme_values"
            app:icon="@drawable/ic_theme"
            app:key="pref_codeviewThemes3"
            app:title="@string/theme3"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="monokai-sublime"
            app:dependency="individualTheme_codeView"
            app:entries="@array/codeView_Theme"
            app:entryValues="@array/codeView_Theme_values"
            app:icon="@drawable/ic_theme"
            app:key="pref_codeviewThemes4"
            app:title="@string/theme4"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/editor">

        <ListPreference
            app:defaultValue="MONOKAI"
            app:entries="@array/editor_themes"
            app:entryValues="@array/editor_themes_values"
            app:icon="@drawable/ic_theme"
            app:key="pref_editorThemes"
            app:title="@string/theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/splitScreen">

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/common">

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="pref_organizeFileInfo"
            app:summary="@string/organizeFileInfo_summary"
            app:title="@string/organizeFileInfo" />

    </PreferenceCategory>

</PreferenceScreen>
