<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addFile_menu"
        android:icon="@drawable/ic_add"
        android:title="@string/addFile_TextMenu"
        app:showAsAction="always" />

    <item
        android:id="@+id/cloud_upload"
        android:icon="@drawable/ic_baseline_cloud_upload_24"
        android:title="@string/cloud_upload"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/settings_Menu"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/cloud_browser"
        android:title="@string/cloud_browser"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/account"
        android:title="@string/account" />
</menu>
